FIX: align text fomr link

--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -21,6 +21,5 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    text-align: center;
     color: var(--primary-400);
 }
